--- a/css/style.css
+++ b/css/style.css
@@ -13,6 +13,7 @@ body {
     background-image: url("https://t4.ftcdn.net/jpg/03/03/81/43/240_F_303814328_Q35VPlZHjPuFvwvRsEnmrDiw0vjcy7pF.jpg");
     background-repeat: no-repeat;
     background-size: cover;
+    background-position: center;
 }
 
 h1 {
@@ -33,26 +34,21 @@ h1 {
     margin-top: 0;
     padding: 10px;
     width: 100%;
+    list-style: none;
 }
 
 .logo-smartshop{
     display: flex;
-    width: 15rem;
-    height: 15rem;
-    margin-left: 1rem;
+    width: 12rem;
+    height: 12rem;
+    margin-left: 2rem;
     margin-right: 1rem;
     border-radius: 10rem;
-    justify-content: center;
-    align-self: center;
-    align-items: center;
-    width: auto; 
 }
 
-
-
-.logo-footer{
-    display: flex;
-    justify-content: center;
+.bar-btn{
+    font-size: 2.5rem;
+    color: #ffffff;
 }
 
 .barra-busqueda{
@@ -67,6 +63,8 @@ h1 {
 .izquierda {
     display: flex;
     align-items: left;
+    margin-right: 2rem;
+    cursor: pointer;
 }
 
 .boton-carrito {
@@ -80,16 +78,46 @@ h1 {
 
 .menu{
     list-style: none;
+    background-color: rgba(0, 0, 0, .95);
+    position: fixed;
+    width: 100%;
+    height: 0vh;
+    top: 100px;
+    text-align: left;
+    transition: all .5s;
+
 }
 
-.inicio-sesion {
-    width: 100;
-    display: flex;
-    margin: 0 auto;
-    padding: 1rem;
-    flex-wrap: wrap;
+.menu li{
+    display: none;
+    line-height: 3rem;
+    margin: 5rem 0;
+    transition: all .5s;
 }
 
+.menu li a{
+    color: #fff;
+    font-size: 1.6rem;
+    text-transform: uppercase;
+    font-weight: 600;
+}
+
+.menu li a.active, .menu li a:hover{
+    color: rgba(248, 8, 8,);
+    transition: .3s;
+}
+
+#check{
+    display: none;
+}
+
+#check:checked ~ .nav-menu{
+    height: 100vh;
+}
+
+#check:checked ~ .nav-menu li{
+    display: block;
+}
 
 .inicio-sesion input {
     margin-left: 2rem;
