--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,7 @@ html {
 }
 
 body {
-    background-image: url("https://t4.ftcdn.net/jpg/03/03/81/43/240_F_303814328_Q35VPlZHjPuFvwvRsEnmrDiw0vjcy7pF.jpg");
+    background-image: url("../assets/img/fondo-main-4.jpg");
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
@@ -19,138 +19,113 @@ body {
 h1 {
     text-align: center;
     font-size: 5rem;
-    margin-top: 1rem;
+    padding-top: 1rem;
     margin-bottom: 1rem;
     color: whitesmoke;
     text-decoration: underline;
-    border: #111 0.5rem;
 }
 
-.barra-header {
+header {
+    top: 0;
+    width: 100%;
+    height: 15rem;
+}
+
+.nav-header {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    color: #fff;
+    font-family: 'Goldman', cursive;
     margin-top: 0;
     padding: 10px;
     width: 100%;
     list-style: none;
+    color: #ffffff;
 }
 
-.logo-smartshop{
-    display: flex;
+.logo-smartshop {
     width: 12rem;
     height: 12rem;
     margin-left: 2rem;
     margin-right: 1rem;
     border-radius: 10rem;
+    border: solid #38B6FF 0.5rem;
 }
 
-.bar-btn{
-    font-size: 2.5rem;
+.bar-btn {
+    font-size: 3rem;
     color: #ffffff;
-}
-
-.barra-busqueda{
-    padding-top: 1rem;
-}
-
-.envios {
-    text-align: center;
-    gap: 3rem;
-}
-
-.izquierda {
-    display: flex;
-    align-items: left;
-    margin-right: 2rem;
     cursor: pointer;
-}
-
-.boton-carrito {
-    background-color: white;
-}
-
-.icon-menu{
-    width: 2rem;
-    height: 2rem;
-}
-
-.menu{
-    list-style: none;
-    background-color: rgba(0, 0, 0, .95);
-    position: fixed;
-    width: 100%;
-    height: 0vh;
-    top: 100px;
-    text-align: left;
-    transition: all .5s;
+    margin-right: 2rem;
 
 }
 
-.menu li{
+.nav-menu {
     display: none;
-    line-height: 3rem;
-    margin: 5rem 0;
-    transition: all .5s;
+    height: 20rem;
+    gap: 2rem;
+    list-style: none;
+    width: 100%;
+    height: 7rem;
+    top: 5rem;
+    text-align: center;
+    justify-content: center;
+    transition: all 0.5s;
+    position: fixed;
+    right: 0;
+    z-index: 2;
+    background-color: black;
+    padding-top: 2rem;
+    padding-bottom: 2rem;
 }
 
-.menu li a{
+.nav-menu li {
+    line-height: 0.5rem;
+    margin: 0.2rem 0;
+    transition: all 0.5s;
+}
+
+.nav-menu li a {
     color: #fff;
     font-size: 1.6rem;
     text-transform: uppercase;
     font-weight: 600;
+    padding-top: 0.7rem;
 }
 
-.menu li a.active, .menu li a:hover{
-    color: rgba(248, 8, 8,);
-    transition: .3s;
+.nav-menu li a.active,
+.nav-menu li a:hover {
+    color: #38B6FF;
+    transition: 0.3s;
 }
 
-#check{
+#check {
     display: none;
 }
 
-#check:checked ~ .nav-menu{
-    height: 100vh;
+#check:checked~.nav-menu {
+    display: flex;
+    height: auto;
 }
 
-#check:checked ~ .nav-menu li{
-    display: block;
+#check:checked~.bar-btn i {
+    transform: rotate(90deg);
 }
 
-.inicio-sesion input {
-    margin-left: 2rem;
-}
-
-.inicio-sesion-letra{
-    font-size: 1.3rem;
-}
-
-nav .menu{
+.nav-header .nav-menu {
     width: 100%;
     height: 0;
     overflow: hidden;
 }
 
-nav ul{
-    flex-direction: column;
-    align-items: center;
-    padding: 0.5rem 0;
-}
-nav label{
-    display: inline-flex;
-    color: white;
-    cursor: pointer;
-}
-nav #toggle:checked ~ .menu{
-    height: 100%;
-}  
-
 .derecha {
     display: flex;
     align-items: center;
     height: 0;
+}
+
+h4 {
+    color: #38B6FF;
 }
 
 .carrito a {
@@ -161,18 +136,18 @@ nav #toggle:checked ~ .menu{
 
 }
 
-.centro {
+.div-centro {
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
     font-size: 2rem;
-    text-align: center;
+    height: 12rem;
 }
 
 .carrito-img {
     height: 25px;
     margin-right: 5px;
-}
-
-header {
-    top: 0;
 }
 
 .boton-inicio {
@@ -187,22 +162,23 @@ header {
     text-align: left;
 }
 
-nav {
+.barra-nav {
     overflow: hidden;
+    justify-content: center;
 }
 
-nav ul {
+.barra-nav ul {
     list-style-type: none;
     margin: 0;
     padding: 0;
 }
 
-nav li {
+.barra-nav li {
     float: left;
     position: relative;
 }
 
-nav li a {
+.barra-nav li a {
     display: block;
     color: #1C1C1E;
     text-align: center;
@@ -210,29 +186,29 @@ nav li a {
     text-decoration: none;
 }
 
-nav li a:hover {
+.barra-nav li a:hover {
     color: white;
 }
 
-nav li form {
+.barra-nav li form {
     display: flex;
     align-items: center;
     justify-content: center;
 }
 
-nav li input[type="text"] {
+.barra-nav li input[type="text"] {
     padding: 6px;
     margin: 0 6px;
     border-radius: 4px;
     border: none;
-    border: solid black 0.1rem;
+    border: solid #38B6FF 0.2rem;
     text-align: center;
 
 }
 
-nav li button[type="submit"] {
-    background-color: black;
-    color: white;
+.barra-nav li button[type="submit"] {
+    background-color: white;
+    color: black;
     border: none;
     border-radius: 4px;
     padding: 6px 10px;
@@ -240,8 +216,8 @@ nav li button[type="submit"] {
     border: solid white 0.1rem;
 }
 
-nav li button[type="submit"]:hover {
-    background-color: black;
+.barra-nav li button[type="submit"]:hover {
+    background-color: #38B6FF;
     border: white 0.2rem;
 }
 
@@ -302,11 +278,7 @@ section li a:hover {
 
 .div1 {
     width: 100%;
-
 }
-
-
-
 
 .p-qns-somos {
     font-size: 1.5rem;
@@ -315,78 +287,44 @@ section li a:hover {
     color: white;
 }
 
-.secciones-imagenes {
-    display: flex;
-    flex-direction: row;
-}
-
-.contenedor-img-txt {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
-    height: 30rem;
+.seccion-img-li {
+    display: grid;
     width: 100%;
+    height: 30rem;
+    grid-template-rows: 1fr auto;
+
 }
 
-.secciones-li {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around
+.seccion-imagenes {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    justify-items: center;
+    gap: 1rem;
+
 }
 
-.img-celular {
-    width: 20rem;
-    height: 20rem;
-    border-radius: 10rem;
-    border: double black 0.2rem;
-    margin-left: 2rem;
-    margin-top: 2rem;
-    margin-right: 1rem;
-    filter: blur(0.1rem) contrast(1rem);
-}
-
-.img-reloj {
-    width: 20rem;
-    height: 20rem;
-    border-radius: 10rem;
-    border: double black 0.2rem;
-    margin-left: 2rem;
-    margin-top: 2rem;
-    filter: blur(0.1rem) contrast(1rem);
-}
-
+.img-celular,
+.img-reloj,
 .img-auricular {
     width: 20rem;
     height: 20rem;
     border-radius: 10rem;
     border: double black 0.2rem;
-    margin-left: 2rem;
-    margin-top: 2rem;
     filter: blur(0.1rem) contrast(1rem);
 }
 
-
-
-.li-nombres-txt {
+.secciones-li {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    justify-items: center;
     text-decoration: underline;
-    color: #1C1C1E;
+    gap: 1rem;
 }
-
-.li-nombres-txt r {
-    margin-left: 10rem;
-}
-
-.li-nombres-txt a {
-    margin-left: 4rem;
-}
-
 
 .anuncio {
     width: 100%;
     margin-left: 50rem;
     margin-top: 5rem;
-
-
 }
 
 .img-celular-d {
@@ -435,7 +373,7 @@ section li a:hover {
 h2 {
     text-align: center;
     color: white;
-    text-decoration: underline red;
+    text-decoration: underline #38B6FF;
     font-size: 3rem;
 }
 
@@ -485,47 +423,30 @@ h2 {
 
 }
 
-.grid-preguntas {
-    display: grid;
-    width: 100%;
-    height: 100vh;
-    grid-template-columns: repeat(4, 1fr);
-    grid-template-rows: 0.2fr 0.10fr 0.05fr;
-    grid-gap: 1rem;
-    color: white;
-    grid-template-areas:
-    "titulo titulo titulo titulo"
-    "preguntas preguntas preguntas preguntas"
-    "respuestas respuestas respuestas respuestas"
-    ;
-}
-
 .titulo {
-    display: flex;
-    grid-area: titulo;
     align-items: center;
     justify-content: center;
     text-align: center;
 }
 
-.preguntas {
-    display: flex;
+.preguntasyrespuestas {
     color: white;
-    font-size: 2rem;
-    grid-area: preguntas;
-    text-align: center;
-    justify-content: center;
-    gap: 7rem;
 }
 
-.respuestas {
-    grid-area: respuestas;
-    display: flex;
-    color: white;
+.preguntasyrespuestas h4 {
+    font-size: 2rem;
+}
+
+.preguntasyrespuestas p {
+    padding-top: 1rem;
     font-size: 1.5rem;
-    text-align: center;
+    padding-bottom: 1rem;
+}
+
+.barra-pregunta {
+    display: flex;
     justify-content: center;
-    gap: 2rem;
+    align-self: center;
 }
 
 .celulares-inteligentes {
@@ -778,6 +699,27 @@ h2 {
     margin-top: 2rem;
 }
 
+.container-carousel {
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    align-items: center;
+    align-self: center;
+    padding-left: 5rem;
+    padding-right: 5rem;
+}
+
+.img-carousel {
+    width: 20rem;
+    height: 100rem;
+}
+
+.nrtd {
+    text-align: center;
+    color: white;
+    text-decoration: underline #38B6FF;
+    font-size: 2rem;
+}
 
 footer {
     color: #ffffff;
@@ -787,7 +729,7 @@ footer {
 .whatsapp-logo {
     position: fixed;
     bottom: 1rem;
-    right: 2rem;
+    right: 0.5rem;
     width: 3rem;
     height: 3rem;
     color: white;
@@ -797,7 +739,7 @@ footer {
 .instagram-logo {
     position: fixed;
     bottom: 1rem;
-    right: 6rem;
+    right: 4.5rem;
     width: 3rem;
     height: 3rem;
 }
@@ -805,15 +747,21 @@ footer {
 .gmail-logo {
     position: fixed;
     bottom: 1rem;
-    right: 10rem;
+    right: 8.5rem;
     width: 3rem;
     height: 3rem;
 }
 
 .footer-container {
-    display: flex;
-    justify-content: space-between;
-
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(2, 1fr);
+    grid-template-areas:
+        "footer-info footer-subscripcion footer-politicas"
+        "footer-credit footer-certificacion ."
+    ;
+    justify-items: center;
+    align-items: center;
 }
 
 .footer-info h4 {
@@ -822,26 +770,64 @@ footer {
 }
 
 .footer-info p {
-    font-size: 1rem;
+    font-size: 1.1rem;
     margin: 0;
 }
 
 .footer-credit {
     text-align: right;
     font-size: 1rem;
+    grid-area: footer-credit;
 }
 
-.video-smartshop {
-    display: flex;
-    justify-content: center;
-    align-items: center;
+.footer-subscripcion {
+    grid-area: footer-subscripcion;
 }
 
-.video {
-    max-width: 100%;
-    max-height: 100%;
-    margin-top: 4rem;
+.footer-subscripcion h4 {
+    font-size: 1.2rem;
+    justify-self: center;
 }
+
+.footer-politicas {
+    text-decoration: underline #38B6FF;
+    color: white;
+    grid-area: footer-politicas;
+}
+
+.footer-politicas h4 {
+    font-size: 1.3rem;
+    text-align: center;
+}
+
+.footer-politicas ul {
+    list-style: none;
+}
+
+.footer-politicas ul li a {
+    text-decoration: underline #38B6FF;
+    color: white;
+    font-size: 1.2rem;
+}
+
+.footer-certificacion {
+    grid-area: footer-certificacion;
+}
+
+.footer-certificacion h4 {
+    font-size: 1.3rem;
+}
+
+.footer-certificacion ul {
+    list-style: none;
+}
+
+.footer-certificacion img {
+    height: 8rem;
+    width: 8rem;
+    border-radius: 5rem;
+}
+
 
 .reseñas {
     display: flex;
@@ -872,34 +858,182 @@ footer {
     color: white;
 }
 
-@media (max-width:768px) {
+@media (max-width:1024px) {
+    .nav-menu li {
+        padding-top: 2rem;
+        padding-bottom: 2rem;
+    }
 
-    .flex-img{
+    .nav-menu li a {
+        font-size: 1rem;
+        display: flex;
+        flex-wrap: wrap;
+        align-items: center;
+        width: 100%;
+    }
+
+    .logo-smartshop {
+        width: 10rem;
+        height: 10rem;
+        margin-left: 1rem;
+    }
+
+    .reseña img {
+        height: 10rem;
+    }
+
+    .reseña p {
+        font-size: 2rem;
+        text-align: center;
+    }
+}
+
+@media (max-width:768px) {
+    .nav-menu {
+        flex-direction: column;
+        font-size: 0.7rem;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .nav-menu li a {
+        font-size: 1rem;
+    }
+
+    .flex-img {
         display: flex;
         flex-wrap: wrap;
     }
 
-
-    .img-celular{
+    .img-celular {
         width: 15rem;
         height: 15rem;
         display: flex;
         flex-direction: row;
     }
 
-.img-reloj{
-    width: 15rem;
-    height: 15rem;
-    display: flex;
-    flex-direction: row;
+    .img-reloj {
+        width: 15rem;
+        height: 15rem;
+        display: flex;
+        flex-direction: row;
+    }
+
+    .img-auricular {
+        width: 15rem;
+        height: 15rem;
+        display: flex;
+        flex-direction: row;
+    }
 }
 
-.img-auricular{
-    width: 15rem;
-    height: 15rem;
-    display: flex;
-    flex-direction: row;
+@media (max-width:425px) {
+    .grid-img-li {
+        display: grid;
+        grid-template-columns: 1fr;
+        grid-gap: 1rem;
+
+    }
+
+    .img-celular,
+    .img-reloj,
+    .img-auricular {
+        display: block;
+        margin: 0 auto;
+        width: 80%;
+        height: auto;
+    }
+
+    .secciones-li {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        text-decoration: underline;
+    }
+
+    .productos-destacados {
+        height: auto;
+        display: flex;
+        flex-direction: column;
+    }
+
+    .footer-container {
+        display: flex;
+        flex-direction: column;
+        height: auto;
+        width: auto;
+    }
+
+    .footer-subscripcion,
+    .footer-politicas,
+    .footer-certificacion {
+        padding-top: 2rem;
+        padding-bottom: 2rem;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .footer-credit p{
+        padding-top: 2rem;
+        padding-bottom: 2rem;
+        display: flex;
+        justify-content: flex-start;
+        align-items: flex-end;
+    }
+
+    .footer-info h4 {
+        text-align: center;
 }
 
+.reseña {
+    height: auto;
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: auto auto;
+    grid-template-areas:
+        "reseña-img"
+        "reseña-p";
+}
+
+.reseña img {
+    grid-area: reseña-img;
+    margin: 0 auto;
+    display: block;
+}
+
+.reseña p {
+    grid-area: reseña-p;
+    text-align: center;
+}
 
 }
+    @media (max-width:375px) {
+        .div-centro h4 {
+            font-size: 1.5rem;
+        }
+
+        .bar-btn {
+            font-size: 2rem;
+        }
+
+        .reseña {
+            height: auto;
+            display: grid;
+            grid-template-columns: 1fr;
+            grid-template-rows: auto auto;
+            grid-template-areas:
+                "reseña-img"
+                "reseña-p";
+        }
+
+        .reseña img {
+            grid-area: reseña-img;
+            margin: 0 auto;
+            display: block;
+        }
+
+        .reseña p {
+            grid-area: reseña-p;
+            text-align: center;
+        }
+    }
